# RayTracing

./: .gitignore  CMakeLists.txt  README.md
include/: Box.hpp  Config.hpp  Image.hpp  Light.hpp  Material.hpp  Plane.hpp  Ray.hpp  Render.hpp  Scene.hpp  Shape.hpp  Sphere.hpp  Vec.hpp  Vec3.hpp
src/: Config.cpp  Image.cpp  Render.cpp  main.cpp
